committing  security related configuration changes

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -5,65 +5,104 @@
     <title>RI Login</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/theme.css"/>
-    <link rel="stylesheet" href="css/jqueryui.css" type="text/css" media="screen"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="css/common_header.css"/>
+    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <script src="https://apis.google.com/js/client:platform.js" async defer></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script>
 
-    <script id="login" type="text/html">
- 	</script>
-       
+function signinCallback(authResult) {
+	  if (authResult['status']['signed_in']) {
+	    // Update the app to reflect a signed in user
+	    // Hide the sign-in button now that the user is authorized, for example:
+	    document.getElementById('signinButton').setAttribute('style', 'display: none');
+	    alert("successful");
+	  } else {
+	    // Update the app to reflect a signed out user
+	    // Possible error values:
+	    //   "user_signed_out" - User is signed-out
+	    //   "access_denied" - User denied access to your app
+	    //   "immediate_failed" - Could not automatically log in the user
+	    console.log('Sign-in state: ' + authResult['error']);
+	  }
+	}
+	
+function onSignInCallback(resp) {
+gapi.client.load('plus', 'v1', apiClientLoaded);
+}
 
-    <script id="messageTemplate" type="text/html">
-        <li data-bind="message: $data"></li>
-    </script>
+/**
+* Sets up an API call after the Google API client loads.
+*/
+function apiClientLoaded() {
+gapi.client.plus.people.get({userId: 'me'}).execute(handleEmailResponse);
+}
 
+/**
+* Response callback for when the API client receives a response.
+* @param resp The API response object with the user email and profile information.
+*/
+function handleEmailResponse(resp) {
+	
+var primaryEmail;
+for (var i=0; i < resp.emails.length; i++) {
+  if (resp.emails[i].type === 'account') primaryEmail = resp.emails[i].value;
+}
+$('#j_username').val(primaryEmail);
+$('#j_password').val('referral');
+alert($('#j_username').val());
+document.getElementById('login-form').submit();
+$('login-form').submit(function(event) {
+	   event.preventDefault();
+});
+
+
+}
+	function logout()
+	{
+		gapi.auth.signOut();
+
+	}
+
+</script>
 </head>
-
 <body>
 <!-- Header -->
 <div class="header">
-    <div id="common" class="common"></div>
     <div class="wrapper">
-        <h1 class="remove-bottom">Employee Referral Login</h1>
+        <h1 class="remove-bottom">Employee Referral</h1>
+        
     </div>
 </div>
-
-
-
-<!-- Content -->
 <div id="content">
-    <div id="messages">
-        <div id="errorMessages">
-            <div class="hidden error-message alert-message" data-bind="css: {hidden: errors().length == 0}">
-                <ul data-bind="template: { name: 'messageTemplate', foreach: errors }"></ul>
-            </div>
-        </div>
-    </div>
- <form id="login-form" action="j_spring_security_check" method="post">
-            <div class="center">
-
-                <div class="row">
-                    <label>Username: </label>
-                    <input type="text" name="j_username" id="j_username" maxlength="50"/>
-                </div>
-
-                <div class="row">
-                    <label>Password: </label>
-                    <input type="password" name="j_password" id="j_password" maxlength="50"/>
-                </div>
-
-                <div class="row">
-                    <input type="submit" value="Login" id="login-submit"/>
-                </div>
+ 	<div style="display:none">  
+		<form id="login-form" action="j_spring_security_check" method="post" >
+            <div class="center">                  
+                    <input type="text" name="j_username" id="j_username" maxlength="50"/>                
+                    <input type="password" name="j_password" id="j_password" maxlength="50"/>                
+                    <input type="submit" value="Login" id="login-submit"/>               
             </div>
             <br class="clear"/>
         </form>
-   
-    <div class="container" id="container" data-bind="template: 'login'"></div>
-    <br class="clear"/>
+   </div>
+   <table>
+     <tr>
+		<td>		
+			<div class="socialLoginLinks clearfix">  
+					 <span>Login via Nisum Id</span>
+					 <br> <br>
+				<button id="google-login-button" 
+					data-callback="onSignInCallback"
+				    data-clientid="609666609644-dd7hjkqfhb76ovst14l4gpf9pg8tpmk4.apps.googleusercontent.com"
+				    data-cookiepolicy="single_host_origin"
+				    data-theme="dark"   
+				    data-scope="email" class="g-signin btn-social btn-google">Sign in with Google</button> 
+			</div>
+		</td>
+	</tr>
+   </table>
+   <a href="https://mail.google.com/mail/logout?hl=en">logout</a>
+   <input type="button" value="Logout" onclick="logout()">
 </div>
-
 </body>
-
 </html>
-
