Committing Background Changes

--- a/src/main/webapp/User.html
+++ b/src/main/webapp/User.html
@@ -14,9 +14,10 @@
 <script type="text/javascript" src="js/cuf_run.js"></script>
 <script type="text/javascript" src="js/angular1.2.min.js"></script>
 <script type="text/javascript" src="js/jquery_1.11.1.js"></script>
+<link rel="stylesheet" type="text/css" href="css/home.css">
 <title>User</title>
 </head>
-<body>
+<body class="login-middile-body">
 	<div class="siteDiv">
 		<div class="pageDiv">
 			<div class="topLinkDiv"></div>
@@ -87,8 +88,9 @@
 							<option>Other</option>
 						</select>
 					</div>
-					<button type="submit" class="btn btn-default" ng-click="submit()" value=Register
-						name="post" align="center" >Submit</button>
+						
+					<input type="submit" ng-click="submit()" value=Register name="post" style="float: left" class="button-submit"/>
+					
 					</form>
 			</div>
 </div>
