--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -27,13 +27,9 @@
 <body class="login-middile-body">
 	<div ng-app="" ng-controller="positionController">
 		<form action="#" name="createPosition" onvalidate>
-			<div class="siteDiv">
-				<div class="pageDiv">
-					<div class="topLinkDiv"></div>
+x					<div class="pageDiv">
 					<div class=headerDiv>
 						<div class="logoDiv"></div>
-						<div class="titleDiv"></div>
-						<div class="rightDiv"></div>
 					</div>
 					<div class="container">
 						<h2>Create New Position</h2>
@@ -50,17 +46,17 @@
 							<div class="form-group"
 								ng-class="{'has-error' :createPosition.experienceRequired.$invalid && !createPosition.experienceRequired.$pristine}">
 								<label for="experienceRequired">Experience Required :</label> <select
-									class="form-control" name="experienceRequired" ng-model="experienceRequired"
-									id="experienceRequired">
-										<option>0-2</option>
-										<option>2-4</option>
-										<option>4-6</option>
-										<option>6 and above</option>
+									class="form-control" name="experienceRequired"
+									ng-model="experienceRequired" id="experienceRequired">
+									<option value="1">0-2</option>
+									<option value="2">2-4</option>
+									<option value="3">4-6</option>
+									<option value="4">6 and above</option>
 								</select> <span class="help-block"
 									ng-show="createPosition.experienceRequired.$invalid && !createPosition.experienceRequired.$pristine">City
 									is required.</span>
 							</div>
-
+							
 							<div class="form-group" ng-class="{ 'has-error' : createPosition.skillsRequired.$invalid && !createPosition.skillsRequired.$pristine }">
 								<label for="skillsRequired">Skills :</label> <input type="text" name="skillsRequired"
 									class="form-control" id="skillsRequired"
@@ -96,11 +92,10 @@
 									class="help-block">Designation is required.</span>
 							</div>
 
-							<input type="button" ng-click="submit()" value=Register name="post" align="center" style="color: 0000FF"/>
+							<input type="button" class="btn btn-info" ng-click="submit()" value=Register name="post" align="center" style="color: 0000FF"/>
 						</form>
 					</div>
 					<br />
-					<div class="copyrightDiv"></div>
 				</div>
 			</div>
 
