Committing Data Changes

--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -27,7 +27,7 @@
 <body class="login-middile-body">
 	<div ng-app="" ng-controller="positionController">
 		<form action="#" name="createPosition" onvalidate>
-x					<div class="pageDiv">
+				<div class="pageDiv">
 					<div class=headerDiv>
 						<div class="logoDiv"></div>
 					</div>
